k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: gces-projeto-individual
  annotations:
    cert-manager.io/issuer: mkjs-selfsigned
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gces-projeto-individual.local
      secretName: frontend-tls
  rules:
    - host: gces-projeto-individual.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
